metadata/labels/objects/Band__c.object
<CustomObject>
    <description>The performers at the festival.</description>
    <fields>
        <fullName>Genre__c</fullName>
        <description>The type of music the band plays</description>
        <label>Genre</label>
        <picklist>
            <picklistValues>
                <fullName>Bossanova</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jazz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rhythm and Blues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Headliner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check &quot;yes&quot; if the band is one of the main attractions to the festival.</description>
        <label>Headliner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_s_Phone_Number__c</fullName>
        <description>The band manager&apos;s phone number.</description>
        <label>Manager&apos;s Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Needs_piano__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the band needs a piano on stage for their performance.</description>
        <label>Needs piano</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_Time__c</fullName>
        <description>The time the band is scheduled to perform on stage.</description>
        <label>Set Time</label>
        <picklist>
            <picklistValues>
                <fullName>10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <description>The band&apos;s account name on Twitter.</description>
        <label>Twitter Handle</label>
        <type>TextArea</type>
    </fields>
    <label>Band</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Band Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>